--- a/inst/tutorials/Practical1/EP03_Likelihood_Practical1.html
+++ b/inst/tutorials/Practical1/EP03_Likelihood_Practical1.html
@@ -184,7 +184,7 @@ $(document).ready(function () {
 </ul>
 <div id="section-question-1-1" class="section level3">
 <h3>Question 1</h3>
-<p>We want to see how the log-transformed serum bilirubin time is related with the rest of the variables. Start by fitting an additive linear regression model, using function <code>lm()</code>, and interpret the results you obtain from the <code>summary()</code> method. Name the fitted model <code>fit1</code>.</p>
+<p>We want to see how the log-transformed serum bilirubin is related with the rest of the variables. Start by fitting an additive linear regression model, using function <code>lm()</code>, and interpret the results you obtain from the <code>summary()</code> method. Name the fitted model <code>fit1</code>.</p>
 <div class="tutorial-exercise" data-label="P1" data-caption="Code" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="10">
 <script type="application/json" data-opts-chunk="1">{"fig.width":6.5,"fig.height":4,"fig.retina":2,"fig.align":"default","fig.keep":"high","fig.show":"asis","out.width":624,"warning":true,"error":false,"message":true,"exercise.df_print":"paged","exercise.checker":"NULL"}</script>
 </div>
