--- a/inst/tutorials/Practical1/EP03_Likelihood_Practical1.html
+++ b/inst/tutorials/Practical1/EP03_Likelihood_Practical1.html
@@ -127,6 +127,16 @@ $(document).ready(function () {
 <li>The p-value is 1 minus the chance that the alternative hypothesis is correct.</li>
 <li>The p-value is the chance that the data we have observed come from the null hypothesis.</li>
 </ol>
+<pre class="r"><code>quiz(
+  question(&quot;Which of the following is correct?&quot;,
+    answer(&quot;Statement 1 is correct, and the others wrong.&quot;),
+    answer(&quot;Statement 2 is correct, and the others wrong.&quot;),
+    answer(&quot;Statement 3 is correct, and the others wrong.&quot;),
+    answer(&quot;Only Statements 1 and 3 are correct.&quot;),
+    answer(&quot;None of the statments is correct.&quot;, correct = TRUE),
+    allow_retry = TRUE, random_answer_order = FALSE
+  )
+)</code></pre>
 <p><div class="panel-heading tutorial-quiz-title">Quiz</div><div class="panel panel-default">
 <div data-label="Q1-1" class="tutorial-question panel-body">
 <div id="Q1-1-answer_container" class="shiny-html-output"></div>
@@ -138,7 +148,17 @@ $(document).ready(function () {
 </div>
 <div id="section-question-2" class="section level3">
 <h3>Question 2</h3>
-<p>The maximum likelihood estimation methods gives us consistent estimates. <div class="panel-heading tutorial-quiz-title">Quiz</div><div class="panel panel-default">
+<p>The maximum likelihood estimation methods gives us consistent estimates.</p>
+<pre class="r"><code>quiz(
+  question(&quot;What this means?&quot;,
+    answer(&quot;The esimates we obtain are unbiased.&quot;),
+    answer(&quot;The estimates we obtain equal the true value in the population.&quot;),
+    answer(&quot;The estimates we obtain comes closer to the true value in the population as the sample size increases.&quot;, correct = TRUE),
+    answer(&quot;The estimates we obtain are relatively close to the true value in the population.&quot;),
+    allow_retry = TRUE, random_answer_order = TRUE
+  )
+)</code></pre>
+<p><div class="panel-heading tutorial-quiz-title">Quiz</div><div class="panel panel-default">
 <div data-label="Q2-1" class="tutorial-question panel-body">
 <div id="Q2-1-answer_container" class="shiny-html-output"></div>
 <div id="Q2-1-message_container" class="shiny-html-output"></div>
@@ -149,6 +169,15 @@ $(document).ready(function () {
 </div>
 <div id="section-question-3" class="section level3">
 <h3>Question 3</h3>
+<pre class="r"><code>quiz(
+  question(&quot;What happens as sample size increases?&quot;,
+    answer(&quot;P-values become smaller and confidence intervals narrower.&quot;, correct = TRUE),
+    answer(&quot;P-values become larger and confidence intervals wider.&quot;),
+    answer(&quot;P-values become smaller and confidence intervals wider.&quot;),
+    answer(&quot;P-values become larger and confidence intervals narrower.&quot;),
+    allow_retry = TRUE, random_answer_order = TRUE
+  )
+)</code></pre>
 <p><div class="panel-heading tutorial-quiz-title">Quiz</div><div class="panel panel-default">
 <div data-label="Q3-1" class="tutorial-question panel-body">
 <div id="Q3-1-answer_container" class="shiny-html-output"></div>
@@ -160,6 +189,15 @@ $(document).ready(function () {
 </div>
 <div id="section-question-4" class="section level3">
 <h3>Question 4</h3>
+<pre class="r"><code>quiz(
+  question(&quot;In the context of hypothesis testing for regression models, which of the following statements is correct?&quot;,
+    answer(&quot;With the Wald test we can only test one coefficient at a time.&quot;),
+    answer(&quot;With the likelihood ratio test we can compare nested models.&quot;, correct = TRUE),
+    answer(&quot;With the score test we fit the model under the null hypothesis, and hence we can only conclude if the null is correct.&quot;),
+    answer(&quot;With the Wald test we fit the model under the alternative hypothesis, and hence we can only conclude if the alternative hypothesis is correct.&quot;),
+    allow_retry = TRUE, random_answer_order = FALSE
+  )
+)</code></pre>
 <p><div class="panel-heading tutorial-quiz-title">Quiz</div><div class="panel panel-default">
 <div data-label="Q4-1" class="tutorial-question panel-body">
 <div id="Q4-1-answer_container" class="shiny-html-output"></div>
@@ -363,7 +401,7 @@ anova(fit2, fit1)</code></pre>
 <script type="application/shiny-prerendered" data-context="server-start">
 library("learnr")
 load("Data.RData")
-knitr::opts_chunk$set(echo = FALSE)
+options(tutorial.exercise.timelimit = 1200)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
@@ -447,7 +485,7 @@ output$`tutorial-exercise-P7-output` <- renderUI({
 <!--/html_preserve-->
 <!--html_preserve-->
 <script type="application/shiny-prerendered" data-context="execution_dependencies">
-{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38]}},"value":[{"type":"character","attributes":{},"value":["backports","base","checkmate","compiler","datasets","digest","ellipsis","evaluate","fastmap","graphics","grDevices","htmltools","htmlwidgets","httpuv","jsonlite","knitr","later","learnr","magrittr","markdown","methods","mime","promises","R6","Rcpp","rlang","rmarkdown","rprojroot","shiny","stats","stringi","stringr","tools","utils","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["1.1.5","3.6.2","2.0.0","3.6.2","3.6.2","0.6.24","0.3.0","0.14","1.0.1","3.6.2","3.6.2","0.4.0","1.5.1","1.5.2","1.6.1","1.28","1.0.0","0.10.1","1.5","1.1","3.6.2","0.9","1.1.0","2.4.1","1.0.3","0.4.4","2.1","1.3-2","1.4.0","3.6.2","1.4.5","1.4.0","3.6.2","3.6.2","2.1.2","0.12","1.8-4","2.2.1"]}]}]}
+{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38]}},"value":[{"type":"character","attributes":{},"value":["backports","base","checkmate","compiler","datasets","digest","ellipsis","evaluate","fastmap","graphics","grDevices","htmltools","htmlwidgets","httpuv","jsonlite","knitr","later","learnr","magrittr","markdown","methods","mime","promises","R6","Rcpp","rlang","rmarkdown","rprojroot","shiny","stats","stringi","stringr","tools","utils","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["1.1.5","3.6.2","2.0.0","3.6.2","3.6.2","0.6.24","0.3.0","0.14","1.0.1","3.6.2","3.6.2","0.4.0","1.5.1","1.5.2","1.6.1","1.28","1.0.0","0.10.1","1.5","1.1","3.6.2","0.9","1.1.0","2.4.1","1.0.3","0.4.4","2.1","1.3-2","1.4.0","3.6.2","1.4.6","1.4.0","3.6.2","3.6.2","2.1.2","0.12","1.8-4","2.2.1"]}]}]}
 </script>
 <!--/html_preserve-->
 </div>
