--- a/inst/tutorials/Practical4/EP03_Survival_Practical3.html
+++ b/inst/tutorials/Practical4/EP03_Survival_Practical3.html
@@ -121,6 +121,19 @@ $(document).ready(function () {
 <p>The following questions test your knowledge in the framework of Cox proportional hazards models, presented in Chapter 4.</p>
 <div id="section-question-1" class="section level3">
 <h3>Question 1</h3>
+<pre class="r"><code>quiz(
+  question(&quot;In Cox PH models the regression coefficients in their original scale (i.e., no transformation) quantify changes for which quantity?&quot;,
+    answer(&quot;The log failure time.&quot;),
+    answer(&quot;The failure time.&quot;),
+    answer(&quot;The expected log failure time.&quot;),
+    answer(&quot;The expected failure time.&quot;),
+    answer(&quot;The log hazard function.&quot;, correct = TRUE),
+    answer(&quot;The expected log hazard function.&quot;),
+    answer(&quot;The hazard function.&quot;),
+    answer(&quot;None of the above.&quot;),
+    allow_retry = TRUE, random_answer_order = FALSE
+  )
+)</code></pre>
 <p><div class="panel-heading tutorial-quiz-title">Quiz</div><div class="panel panel-default">
 <div data-label="Q1-1" class="tutorial-question panel-body">
 <div id="Q1-1-answer_container" class="shiny-html-output"></div>
@@ -133,6 +146,18 @@ $(document).ready(function () {
 <div id="section-question-2" class="section level3">
 <h3>Question 2</h3>
 <p>In a study for hypertensive patients, a new medical treatment is compared with the traditional medication. The hazard ratio for a major cardiac incident between the two treatments is 0.78 (95% CI: 0.71; 0.86).</p>
+<pre class="r"><code>quiz(
+  question(&quot;Which of the following statements is correct?&quot;,
+    answer(&quot;The new treatment lowers the chance of a major cardiac event by 22%.&quot;),
+    answer(&quot;The new treatment lowers the risk of a major cardiac event by 22%.&quot;),
+    answer(&quot;The traditional treatment increases the instaneous risk of a major cardiac event by 28%.&quot;, correct = TRUE),
+    answer(&quot;The traditional treatment increases the instaneous risk of a major cardiac event by 22%.&quot;),
+    answer(&quot;The traditional treatment increases the risk of a major cardiac event by 28%.&quot;),
+    answer(&quot;The traditional treatment increases the risk of a major cardiac event by 22%.&quot;),
+    answer(&quot;None of the above statements is correct.&quot;),
+    allow_retry = TRUE, random_answer_order = FALSE
+  )
+)</code></pre>
 <p><div class="panel-heading tutorial-quiz-title">Quiz</div><div class="panel panel-default">
 <div data-label="Q2-1" class="tutorial-question panel-body">
 <div id="Q2-1-answer_container" class="shiny-html-output"></div>
@@ -145,6 +170,15 @@ $(document).ready(function () {
 <div id="section-question-3" class="section level3">
 <h3>Question 3</h3>
 <p>Continuing on the result from the study described in Question 2, we observe that the 95% confidence interval for the hazard ratio is slightly non-symetric.</p>
+<pre class="r"><code>quiz(
+  question(&quot;Which of the following statements is correct?&quot;,
+    answer(&quot;The 95% CI is non-symmetric due to rounding error.&quot;),
+    answer(&quot;The 95% CI has been wrongly calculated, it should be exactly symmetric.&quot;),
+    answer(&quot;The 95% CI for the log hazard ratio is symmetric, not for the hazad ratio.&quot;, correct = TRUE),
+    answer(&quot;The 95% CI is non-symmetric due to the semi-parametric nature of the Cox model (i.e., as in other non-parametric methods).&quot;),
+    allow_retry = TRUE, random_answer_order = TRUE
+  )
+)</code></pre>
 <p><div class="panel-heading tutorial-quiz-title">Quiz</div><div class="panel panel-default">
 <div data-label="Q3-1" class="tutorial-question panel-body">
 <div id="Q3-1-answer_container" class="shiny-html-output"></div>
@@ -156,6 +190,15 @@ $(document).ready(function () {
 </div>
 <div id="section-question-4" class="section level3">
 <h3>Question 4</h3>
+<pre class="r"><code>quiz(
+  question(&quot;Why Cox PH models are called semi-parametric models?&quot;,
+    answer(&quot;Because they make no assumptions for the distribution of the covariates in the model.&quot;),
+    answer(&quot;Because they make no assumptions for the distribution of the survival times.&quot;, correct = TRUE),
+    answer(&quot;Because the effects of covariates on the hazard function can be nonlinear.&quot;),
+    answer(&quot;Because they do not have error terms as AFT models do.&quot;),
+    allow_retry = TRUE, random_answer_order = TRUE
+  )
+)</code></pre>
 <p><div class="panel-heading tutorial-quiz-title">Quiz</div><div class="panel panel-default">
 <div data-label="Q4-1" class="tutorial-question panel-body">
 <div id="Q4-1-answer_container" class="shiny-html-output"></div>
@@ -167,6 +210,16 @@ $(document).ready(function () {
 </div>
 <div id="section-question-5" class="section level3">
 <h3>Question 5</h3>
+<pre class="r"><code>quiz(
+  question(&quot;What is a consequence of the fact that Cox models are semi-parametric (more than one correct possible)?&quot;,
+    answer(&quot;We cannot obtain absolute instantaneous risks only relative instantaneous risks.&quot;, correct = TRUE),
+    answer(&quot;We cannot obtain relative instantaneous risks only absolute instantaneous risks.&quot;),
+    answer(&quot;We cannot obtain survival probabilities.&quot;, correct = TRUE),
+    answer(&quot;We cannot obtain expected failure times as in AFT models.&quot;, correct = TRUE),
+    answer(&quot;We cannot obtain relative risks (i.e., ratio of probabilities not hazards).&quot;, correct = TRUE),
+    allow_retry = TRUE, random_answer_order = TRUE
+  )
+)</code></pre>
 <p><div class="panel-heading tutorial-quiz-title">Quiz</div><div class="panel panel-default">
 <div data-label="Q5-1" class="tutorial-question panel-body">
 <div id="Q5-1-answer_container" class="shiny-html-output"></div>
@@ -178,6 +231,15 @@ $(document).ready(function () {
 </div>
 <div id="section-question-6" class="section level3">
 <h3>Question 6</h3>
+<pre class="r"><code>quiz(
+  question(&quot;Which of the following statements stems from the proportional hazards assumption?&quot;,
+    answer(&quot;The instantaneous risk of an event remains constant over time.&quot;),
+    answer(&quot;The effect of covariates on the hazard remains constant over time.&quot;, correct = TRUE),
+    answer(&quot;The baseline instantaneous risk remains constant over time.&quot;),
+    answer(&quot;Covariates remain constant over time (i.e., we have only baseline covariates).&quot;),
+    allow_retry = TRUE, random_answer_order = TRUE
+  )
+)</code></pre>
 <p><div class="panel-heading tutorial-quiz-title">Quiz</div><div class="panel panel-default">
 <div data-label="Q6-1" class="tutorial-question panel-body">
 <div id="Q6-1-answer_container" class="shiny-html-output"></div>
@@ -203,7 +265,7 @@ $(document).ready(function () {
 <div id="section-question-1-1" class="section level3">
 <h3>Question 1</h3>
 <p>Fit a Cox model that relaxes the linearity assumption for the effect of <code>CD4</code> using natural cubic splines (for this you will need to use function <code>ns()</code>, i.e., within the formula argument of <code>coxph()</code> use <code>ns(CD4, 3)</code>). In addition, include the main effects of <code>drug</code> and <code>AZT</code>, and the interaction effects of <code>CD4</code> with both <code>drug</code> and <code>AZT</code>. Name the fitted model <code>fit1</code>.</p>
-<div class="tutorial-exercise" data-label="P1" data-caption="Code" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="10">
+<div class="tutorial-exercise" data-label="P1" data-caption="Code" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="15">
 <script type="application/json" data-opts-chunk="1">{"fig.width":6.5,"fig.height":4,"fig.retina":2,"fig.align":"default","fig.keep":"high","fig.show":"asis","out.width":624,"warning":true,"error":false,"message":true,"exercise.df_print":"paged","exercise.checker":"NULL"}</script>
 </div>
 <div class="tutorial-exercise-support" data-label="P1-hint-1" data-caption="Code" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
@@ -337,7 +399,7 @@ library("survival")
 library("lattice")
 library("splines")
 load("Data.RData")
-knitr::opts_chunk$set(echo = FALSE)
+options(tutorial.exercise.timelimit = 1200)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
@@ -415,7 +477,7 @@ output$`tutorial-exercise-P5-output` <- renderUI({
 <!--/html_preserve-->
 <!--html_preserve-->
 <script type="application/shiny-prerendered" data-context="execution_dependencies">
-{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43]}},"value":[{"type":"character","attributes":{},"value":["backports","base","checkmate","compiler","datasets","digest","ellipsis","evaluate","fastmap","graphics","grDevices","grid","htmltools","htmlwidgets","httpuv","jsonlite","knitr","later","lattice","learnr","magrittr","markdown","Matrix","methods","mime","promises","R6","Rcpp","rlang","rmarkdown","rprojroot","shiny","splines","stats","stringi","stringr","survival","tools","utils","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["1.1.5","3.6.2","2.0.0","3.6.2","3.6.2","0.6.24","0.3.0","0.14","1.0.1","3.6.2","3.6.2","3.6.2","0.4.0","1.5.1","1.5.2","1.6.1","1.28","1.0.0","0.20-38","0.10.1","1.5","1.1","1.2-18","3.6.2","0.9","1.1.0","2.4.1","1.0.3","0.4.4","2.1","1.3-2","1.4.0","3.6.2","3.6.2","1.4.5","1.4.0","3.1-8","3.6.2","3.6.2","2.1.2","0.12","1.8-4","2.2.1"]}]}]}
+{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43]}},"value":[{"type":"character","attributes":{},"value":["backports","base","checkmate","compiler","datasets","digest","ellipsis","evaluate","fastmap","graphics","grDevices","grid","htmltools","htmlwidgets","httpuv","jsonlite","knitr","later","lattice","learnr","magrittr","markdown","Matrix","methods","mime","promises","R6","Rcpp","rlang","rmarkdown","rprojroot","shiny","splines","stats","stringi","stringr","survival","tools","utils","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["1.1.5","3.6.2","2.0.0","3.6.2","3.6.2","0.6.24","0.3.0","0.14","1.0.1","3.6.2","3.6.2","3.6.2","0.4.0","1.5.1","1.5.2","1.6.1","1.28","1.0.0","0.20-38","0.10.1","1.5","1.1","1.2-18","3.6.2","0.9","1.1.0","2.4.1","1.0.3","0.4.4","2.1","1.3-2","1.4.0","3.6.2","3.6.2","1.4.6","1.4.0","3.1-8","3.6.2","3.6.2","2.1.2","0.12","1.8-4","2.2.1"]}]}]}
 </script>
 <!--/html_preserve-->
 </div>
